# BSc-project-19-20

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .travis.yml.save  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  LICENSE  Makefile  MapperConfig.h.in  README.md  a.out  brown_mapper.cpp  build.sh  cmake_install.cmake  config.h.in  default.profraw  pink_mapper  pink_mapper_test
alignment/: CMakeLists.txt
alignment/include/alignment/: alignment.hpp  strong_type.hpp
alignment/src/: alignment.cpp
alignment/test/: alignment.t.cpp
blue_alignment/: CMakeLists.txt
blue_alignment/include/alignment/: alignment.hpp  strong_type.hpp
blue_alignment/src/: alignment.cpp
blue_alignment/test/: alignment.t.cpp
blue_common/: CMakeLists.txt
blue_common/src/: strong_type.cpp
blue_minimizers/: CMakeLists.txt
blue_minimizers/include/minimizers/: minimizers.hpp
blue_minimizers/src/: minimizers.cpp
blue_minimizers/test/: minimizers.t.cpp
brown_alignment/: CMakeLists.txt  blue_alignment.cpp  brown_alignment.cpp  brown_alignment.hpp
brown_minimizers/: CMakeLists.txt  brown_minimizers.cpp  brown_minimizers.hpp
build-dir/: CMakeCache.txt  Makefile  Mapper  MapperConfig.h  brown_tests  cmake_install.cmake
build-dir/bioparser/: Makefile  cmake_install.cmake
build-dir/brown_alignment/: Makefile  cmake_install.cmake
build_dir/: CMakeCache.txt  Makefile  Mapper  cmake_install.cmake
build_dir/brown_alignment/: Makefile
build_dir/src/: MapperConfig.h
cmake/: config.hpp.in
doc/: .gitignore  plan_projekta.tex
include/: config.h  config.hpp  mapper.hpp  matcher.hpp  options.h  options.hpp  sequence.hpp  util.hpp
src/: CMakeLists.txt  MapperConfig.h  brown_mapper.cpp  main.cpp  matcher.cpp  orange_alignment.cc  orange_alignment.h  orange_mapper.cc  orange_mapper_conf.h.in  orange_minimizers.cc  orange_minimizers.h  pink_alignment.cpp  pink_alignment.h  pink_mapper.cpp  pink_minimizers.cpp  pink_minimizers.h  white_mapper.cpp
test/: CMakeLists.txt  brown_tests.cpp  minim_gen.py  orange_mapper_tests.cc  ornage_alignment_test.cc  ornage_minimizers_test.cc  ornage_test.cc  pink_mapper_test.cpp
tests/: alignment_test.cpp  minimizers_test.cpp
white_alignment/: CMakeLists.txt  white_alignment.cpp  white_alignment.hpp
white_minimizers/: CMakeLists.txt  white_minimizers.cpp  white_minimizers.hpp
